[build-system]
requires = ['poetry-core>=1.0.0', 'wheel',]
build-backend = 'poetry.core.masonry.api'


[tool.coverage.run]
branch = true
relative_files = true
omit = [
    '.tox/*',
    'tests/*',
]


[tool.flake8]
max-line-length = 120
extend-ignore = 'E303,'  # https://www.flake8rules.com/
max-complexity = 15  # Info: https://en.wikipedia.org/wiki/Cyclomatic_complexity
per-file-ignores = """\
# F401: Ignore "unused" imports
# F403: Ignore star imports
# F405: Ignore names from star imports
# E303: Ignore too many blank lines
__init__.py:F401,F403,F405 \
game.py:F401 \
"""
exclude = [
    'example',
    'main_tf2.py',
]


[tool.poetry]
name = 'rl_car'
version = '0.2.0'
description = "A template Poetry project structure."

authors = ["Lari Liuhamo <lari.liuhamo+pypi@gmail.com>",]
maintainers = ["Lari Liuhamo <lari.liuhamo+pypi@gmail.com>",]

include = ['CHANGELOG.md', 'LICENSE',]
license = 'MIT'
readme = 'README.md'

homepage = 'https://pypi.org/project/rl_car/'
repository = 'https://github.com/Diapolo10/rl_car'
documentation = 'https://github.com/Diapolo10/rl_car/tree/main/docs'

keywords = [
    'python3',
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Topic :: Education',
    'Topic :: Games/Entertainment :: Arcade',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Visualization',
    'Typing :: Typed',
]


[tool.poetry.dependencies]
python = '^3.8.1,<3.12'
arcade = '^2.6.17'
numpy = '^1.24.2'
shapely = '^1.8.5'
torch = '^1.13.1'
tensorflow = '^2.11.0'


[tool.poetry.dev-dependencies]
coverage = {version = '^7.2.1', extras = ['toml',]}
flake8 = '^6.0.0'
flake8-pyproject = '^1.2.2'
mypy = '^1.0.1'
pylint = '^2.16.2'
pytest = '^7.2.1'
pytest-cov = '^4.0.0'
tox = '^4.4.6'
tox-gh-actions = '^3.0.0'


[tool.poetry.urls]
"Source code" = 'https://github.com/Diapolo10/rl_car'
"Tracker" = 'https://github.com/Diapolo10/rl_car/issues'
"Changelog" = 'https://github.com/Diapolo10/rl_car/blob/main/CHANGELOG.md'


[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
max-locals = 20
disable = [
    # https://vald-phoenix.github.io/pylint-errors/
    'R0902',  # Too many instance attributes
    'R0901',  # Too many ancestors
    'W0223',  # Abstract method not overridden
    'W0511',  # TO-DO -messages
    'W0611',  # Unused import
    'E0401',  # Import error
]


[tool.pylint.'MASTER']
ignore-patterns = [
    '.*main_tf2.py',
    '.*example',
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
--doctest-modules \
--cov=./ \
--cov-append \
--cov-report html:tests/reports/coverage-html \
--cov-report xml:tests/reports/coverage.xml \
--ignore=docs/
"""
testpaths = [
    'tests',
]


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, pypy3
isolated_build = True

[gh-actions]
python =
    3.8: py38
    3.9: py39
    pypy-3.8: pypy3

[gh-actions:env]
PLATFORM =
    ubuntu-latest: linux
    macos-latest: macos
    windows-latest: windows

[testenv]
passenv = GITHUB_*
deps =
    coverage
    coveralls[toml]
    pytest
    pytest-cov
commands =
    coverage run -m pytest
"""
